# nu_plugin_compress

./: Cargo.toml  README.md
src/: decompress.rs
