[package]
name = "nu_plugin_compress"
version = "0.2.1"
edition = "2021"
authors = ["yybit <yybit2@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/yybit/nu_plugin_compress"
repository = "https://github.com/yybit/nu_plugin_compress"
description = "A nushell plugin for compression and decompression, supporting zstd, gzip, bzip2, and xz."
readme = "README.md"
include = ["**/*.rs", "Cargo.toml"]
keywords = ["nu", "plugin", "compression", "gzip", "zstd"]

[dependencies]
bzip2 = "0.5.0"
flate2 = "1.0.35"
nu-plugin = "0.101.0"
nu-protocol = { version = "0.101.0", features = ["plugin"] }
xz2 = "0.1.7"
zstd = "0.13.2"
